client api implementation

--- a/force-app/main/classes/Client.cls
+++ b/force-app/main/classes/Client.cls
@@ -1,9 +1,25 @@
 public class Client {
 
     private Config config;
+    private OASClient client;
 
-    public Client(Config config) {
-        System.debug('APEX');
+    public Client(String sdkKey, Config config) {
         this.config = config;
+        OASClient client = new OASClient(this.config);
+        OASClientApi api = new OASClientApi(client);
+
+        OASAuthenticationRequest req = new OASAuthenticationRequest();
+        req.apiKey = sdkKey;
+
+        Map<String, Object> params = new Map<String, Object>{
+            'oaSAuthenticationRequest' => req
+        };
+
+        try {
+            OASAuthenticationResponse result = api.authenticate(params);
+            System.debug(result);
+        } catch (OAS.ApiException e) {
+            System.debug(e);
+        }
     }
 }
