--- a/force-app/main/classes/FFConfig.cls
+++ b/force-app/main/classes/FFConfig.cls
@@ -8,10 +8,15 @@ public class FFConfig {
     private String eventsUrl = EVENTS_URL;
     private Boolean metricsEnabled = METRICS_ENABLED;
 
-    public FFConfig(String baseUrl, String eventsUrl, Boolean metricsEnabled) {
+    private Integer evalExpireAfter = 60000;
+    private Integer authExpireAfter = 60000 * 60 * 24;
+
+    public FFConfig(String baseUrl, String eventsUrl, Boolean metricsEnabled, Integer evalExpireAfter, Integer authExpireAfter) {
         this.baseUrl = baseUrl;
         this.eventsUrl = eventsUrl;
         this.metricsEnabled = metricsEnabled;
+        this.evalExpireAfter = evalExpireAfter;
+        this.authExpireAfter = authExpireAfter;
     }
 
     public String getBaseUrl() {
@@ -26,6 +31,14 @@ public class FFConfig {
         return this.metricsEnabled;
     }
 
+    public Integer getEvalExpireAfter() {
+        return this.evalExpireAfter;
+    }
+
+    public Integer getAuthExpireAfter() {
+        return this.authExpireAfter;
+    }
+
     public static Builder builder() {
         return new Builder();
     }
@@ -35,6 +48,9 @@ public class FFConfig {
         private String baseUrl = FFConfig.BASE_URL;
         private String eventsUrl = FFConfig.EVENTS_URL;
         private Boolean metricsEnabled = METRICS_ENABLED;
+
+        private Integer evalExpireAfter = 300;
+        private Integer authExpireAfter = 60 * 60 * 24;
 
         public Builder baseUrl(String url) {
             this.baseUrl = url;
@@ -51,11 +67,23 @@ public class FFConfig {
             return this;
         }
 
+        public Builder evalExpireAfter(Integer ms) {
+            this.evalExpireAfter = ms;
+            return this;
+        }
+
+        public Builder authExpireAfter(Integer ms) {
+            this.authExpireAfter = ms;
+            return this;
+        }
+
         public FFConfig build() {
             return new FFConfig(
                 this.baseUrl,
                 this.eventsUrl,
-                this.metricsEnabled
+                this.metricsEnabled,
+                this.evalExpireAfter,
+                this.authExpireAfter
             );
         }
     }
