--- a/force-app/main/classes/FFConfig.cls
+++ b/force-app/main/classes/FFConfig.cls
@@ -11,12 +11,24 @@ public class FFConfig {
     private Integer evalExpireAfter = 60000;
     private Integer authExpireAfter = 60000 * 60 * 24;
 
-    public FFConfig(String baseUrl, String eventsUrl, Boolean metricsEnabled, Integer evalExpireAfter, Integer authExpireAfter) {
+    private String cacheNamespace;
+    private String cachePartition;
+
+    public FFConfig(String baseUrl, String eventsUrl, Boolean metricsEnabled, Integer evalExpireAfter, Integer authExpireAfter,
+                    String cacheNamespace, String cachePartition) {
+        if (cacheNamespace.equals('')) {
+            throw new IllegalArgumentException('cacheNamespace cannot be empty');
+        }
+        if (cachePartition.equals('')) {
+            throw new IllegalArgumentException('cachePartition cannot be empty');
+        }
         this.baseUrl = baseUrl;
         this.eventsUrl = eventsUrl;
         this.metricsEnabled = metricsEnabled;
         this.evalExpireAfter = evalExpireAfter;
         this.authExpireAfter = authExpireAfter;
+        this.cacheNamespace = cacheNamespace;
+        this.cachePartition = cachePartition;
     }
 
     public String getBaseUrl() {
@@ -39,6 +51,14 @@ public class FFConfig {
         return this.authExpireAfter;
     }
 
+    public String getCacheNamespace() {
+        return this.cacheNamespace;
+    }
+
+    public String getCachePartition() {
+        return this.cachePartition;
+    }
+
     public static Builder builder() {
         return new Builder();
     }
@@ -51,6 +71,9 @@ public class FFConfig {
 
         private Integer evalExpireAfter = 300;
         private Integer authExpireAfter = 60 * 60 * 24;
+
+        private String cacheNamespace;
+        private String cachePartition;
 
         public Builder baseUrl(String url) {
             this.baseUrl = url;
@@ -77,13 +100,25 @@ public class FFConfig {
             return this;
         }
 
+        public Builder cacheNamespace(String namespace) {
+            this.cacheNamespace = namespace;
+            return this;
+        }
+
+        public Builder cachePartition(String partition) {
+            this.cachePartition = partition;
+            return this;
+        }
+
         public FFConfig build() {
             return new FFConfig(
                 this.baseUrl,
                 this.eventsUrl,
                 this.metricsEnabled,
                 this.evalExpireAfter,
-                this.authExpireAfter
+                this.authExpireAfter,
+                this.cacheNamespace,
+                this.cachePartition
             );
         }
     }
