--- a/force-app/main/classes/FFClient.cls
+++ b/force-app/main/classes/FFClient.cls
@@ -2,40 +2,35 @@ public class FFClient {
 
     private final String sdkKey;
     private final FFConfig config;
-    private final FFBaseCallout client;
     private final FFClientApi api;
-    private final FFTarget target;
 
-    private String envUUID;
+    private String environmentUUID;
     private String cluster = '1';
 
-    private static Integer retryCount = 1;
     private static Integer maxRetry = 5;
     private final Long waitInterval = 2000;
 
     public virtual class AuthException extends Exception {}
 
-    public FFClient(String sdkKey, FFTarget target, FFConfig config) {
+    public FFClient(FFClientApi api, FFConfig config, String environmentUUID, String cluster) {
         this.sdkKey = sdkKey;
         this.config = config;
-        this.target = target;
-        this.client = new FFBaseCallout(this.config);
-        this.api = new FFClientApi(client);
-
-        if (this.config.getCache().get(getAuthCacheKey()) != null) {
-            System.debug('Loading authentication data from cache');
-            Map<String, String> authData = (Map<String, String>) this.config.getCache().get(this.getAuthCacheKey());
-            this.envUUID = authData.get('envUUID');
-            this.cluster = authData.get('cluster');
-            this.client.setJWTToken(authData.get('jwt'));
-        } else {
-            System.debug('Authentication token not found in cache, authenticating...');
-            authenticate();
-        }
+        this.api = api;
+        this.environmentUUID = environmentUUID;
+        this.cluster = cluster;
     }
 
-    private String getAuthCacheKey() {
-        return config.getCache().getCacheNamespace() + '.' + config.getCache().getCachePartition() + '.auth' + this.sdkKey.replaceAll('-', '');
+    private Map<String, String> envAndClusterRequestParams() {
+        return new Map<String, String> { 'environmentUUID' => this.environmentUUID, 'cluster' => this.cluster };
+    }
+
+    public static FFClient create(String sdkKey, FFConfig config) {
+        FFBaseCallout client = new FFBaseCallout(config);
+        FFClientApi api = new FFClientApi(client);
+        FFAuthService authService = new FFCachedAuthService(sdkKey, config, api);
+        FFAuthResult authResult = authService.authenticate();
+        client.setJWTToken(authResult.authToken);
+        return new FFClient(api, config, authResult.environmentUUID, authResult.cluster);
     }
 
     private String getEvalCacheKey(String identifier, String target) {
@@ -48,96 +43,109 @@ public class FFClient {
         return text.replaceAll('[^a-zA-Z0-9\\s+]', '');
     }
 
-    private Boolean authenticate() {
-        FFAuthenticationRequestTarget targetData = new FFAuthenticationRequestTarget();
-        targetData.identifier = this.target.identifier;
-        targetData.name = this.target.name;
-        targetData.anonymous = this.target.anonymous;
-        targetData.attributes = this.target.attributes;
-
-        FFAuthenticationRequest req = new FFAuthenticationRequest();
-        req.apiKey = this.sdkKey;
-        req.target = targetData;
-
-
-        Map<String, Object> params = new Map<String, Object>{
-            'ffAuthenticationRequest' => req
-        };
-
-        try {
-            FFAuthenticationResponse result = api.authenticate(params);
-            String authToken = result.authToken;
-
-            this.client.setJWTToken(authToken);
-
-            List<String> parts = authToken.split('\\.');
-            if (parts.size() != 3) {
-                throw new AuthException('JWT token not valid! parts: ' + parts.size());
-            }
-            String decoded = EncodingUtil.base64Decode(parts.get(1)).toString();
-            FFJWTClaims claims = (FFJWTClaims)JSON.deserialize(decoded, FFJWTClaims.class);
-            this.envUUID = claims.environment;
-            this.cluster = claims.clusterIdentifier;
-            config.getCache().put(getAuthCacheKey(), new Map<String, String>{
-                'envUUID' => this.envUUID,
-                'cluster' => this.cluster,
-                'jwt' => authToken
-            }, config.getAuthExpireAfter());
-            System.debug('Env UUID ' + this.envUUID);
-            System.debug('Cluster ID ' + this.cluster);
-            FFClient.retryCount = 0;
-            return true;
-        } catch (FFBase.ApiException e) {
-            System.debug(e);
-            throw e;
+    private List<FFFeatureConfig> getFeatureConfigs() {
+        FFCache cache = this.config.getCache();
+        List<FFFeatureConfig> featureConfigs = (List<FFFeatureConfig>) cache.get(FFCacheKeys.getFeatureConfigsKey(cache));
+        if(featureConfigs == null) {
+            List<FFFeatureConfig> updated = this.api.getFeatureConfigs(this.envAndClusterRequestParams());
+            cache.put(FFCacheKeys.getFeatureConfigsKey(cache), updated, this.config.getFeatureConfigTimeToLive());
+            return updated;
         }
+        return featureConfigs;
     }
 
-    public List<FFEvaluation> fetchEvaluations() {
-        Map<String, Object> params = new Map<String, Object>{
-            'environmentUUID' => this.envUUID,
-            'target' => this.target.identifier,
-            'cluster' => this.cluster
-        };
-        try {
-            List<FFEvaluation> evals = api.getEvaluations(params);
-            for (FFEvaluation eval: evals) {
-                config.getCache().put(this.getEvalCacheKey(eval.flag, this.target.identifier), eval, config.getEvalExpireAfter());
-            }
-            return evals;
-        } catch (FFBase.ApiException e) {
-            if (FFClient.retryCount <= FFClient.maxRetry && e.getStatusCode() == 403 && authenticate()) {
-                sleep(waitInterval * FFClient.retryCount);
-                return fetchEvaluations();
-            }
-            throw e;
+    private List<FFTargetSegment> getTargetSegments() {
+        FFCache cache = this.config.getCache();
+        List<FFTargetSegment> targetSegments = (List<FFTargetSegment>) cache.get(FFCacheKeys.getTargetSegmentsKey(cache));
+        if(targetSegments == null) {
+            List<FFTargetSegment> updated = this.api.getTargetSegments(this.envAndClusterRequestParams());
+            cache.put(FFCacheKeys.getTargetSegmentsKey(cache), updated, this.config.getFeatureConfigTimeToLive());
+            return updated;
         }
+        return targetSegments;
     }
+
+    private static FFFeatureConfig getFlag(List<FFFeatureConfig> featureConfigs, String key) {
+        for(FFFeatureConfig featureConfig: featureConfigs) {
+            if(featureConfig.feature == key) return featureConfig;
+        }
+        return null;
+    }
+
+    private FFFeatureVariation offVariation(FFFeatureConfig featureConfig) {
+        for(FFFeatureVariation variation: featureConfig.variations){
+            if(variation.identifier == featureConfig.offVariation) {
+                return variation;
+            }
+        }
+        return null;
+    }
+
+
+    private FFFeatureVariation evaluateVariation(String key, FFTarget target, String kind) {
+        List<FFFeatureConfig> featureConfigs = this.getFeatureConfigs();
+        FFFeatureConfig featureConfig = FFClient.getFlag(featureConfigs, key);
+        if(featureConfig == null || featureConfig.kind != kind){
+            return null;
+        }
+        FFSegmentEvaluator segmentEvaluator = new FFSegmentEvaluator(this.getTargetSegments());
+        FFFeatureEvaluator evaluator = FFFeatureEvaluator.defaultEvaluators(segmentEvaluator);
+        FFPrerequisites prerequisites = new FFPrerequisites(featureConfigs, evaluator);
+        if(!prerequisites.passesPrerequisiteChecks(featureConfig, target)) {
+            return this.offVariation(featureConfig);
+        }
+        return evaluator.evaluate(featureConfig, target);
+    }
+
+    // public List<FFEvaluation> fetchEvaluations() {
+    //     Map<String, Object> params = new Map<String, Object>{
+    //         'environmentUUID' => this.envUUID,
+    //         'target' => this.target.identifier,
+    //         'cluster' => this.cluster
+    //     };
+    //     try {
+    //         List<FFEvaluation> evals = api.getEvaluations(params);
+    //         for (FFEvaluation eval: evals) {
+    //             config.getCache().put(this.getEvalCacheKey(eval.flag, this.target.identifier), eval, config.getEvalExpireAfter());
+    //         }
+    //         return evals;
+    //     } catch (FFBase.ApiException e) {
+    //         if (FFClient.retryCount <= FFClient.maxRetry && e.getStatusCode() == 403 && authenticate()) {
+    //             sleep(waitInterval * FFClient.retryCount);
+    //             return fetchEvaluations();
+    //         }
+    //         throw e;
+    //     }
+    // }
+
+    // public FFEvaluation evaluate(String identifier, Object defaultValue) {
+    //     Map<String, Object> params = new Map<String, Object>{
+    //         'feature' => identifier,
+    //         'environmentUUID' => this.envUUID,
+    //         'target' => this.target.identifier,
+    //         'cluster' => this.cluster
+    //     };
+    //     try {
+    //         FFEvaluation eval = (FFEvaluation) config.getCache().get(this.getEvalCacheKey(identifier, this.target.identifier));
+    //         if (eval != null) {
+    //             System.debug('Loading evaluation from cache: ' + identifier);
+    //             return eval;
+    //         }
+    //         eval = api.getEvaluationByIdentifier(params);
+    //         System.debug('Loading evaluation from remote url ' + identifier);
+    //         config.getCache().put(this.getEvalCacheKey(eval.flag, this.target.identifier), eval, config.getEvalExpireAfter());
+    //         return eval;
+    //     } catch (FFBase.ApiException e) {
+    //         if (FFClient.retryCount <= FFClient.maxRetry && e.getStatusCode() == 403 && authenticate()) {
+    //             sleep(waitInterval * FFClient.retryCount);
+    //             return evaluate(identifier, defaultValue);
+    //         }
+    //         throw e;
+    //     }
+    // }
 
     public FFEvaluation evaluate(String identifier, Object defaultValue) {
-        Map<String, Object> params = new Map<String, Object>{
-            'feature' => identifier,
-            'environmentUUID' => this.envUUID,
-            'target' => this.target.identifier,
-            'cluster' => this.cluster
-        };
-        try {
-            FFEvaluation eval = (FFEvaluation) config.getCache().get(this.getEvalCacheKey(identifier, this.target.identifier));
-            if (eval != null) {
-                System.debug('Loading evaluation from cache: ' + identifier);
-                return eval;
-            }
-            eval = api.getEvaluationByIdentifier(params);
-            System.debug('Loading evaluation from remote url ' + identifier);
-            config.getCache().put(this.getEvalCacheKey(eval.flag, this.target.identifier), eval, config.getEvalExpireAfter());
-            return eval;
-        } catch (FFBase.ApiException e) {
-            if (FFClient.retryCount <= FFClient.maxRetry && e.getStatusCode() == 403 && authenticate()) {
-                sleep(waitInterval * FFClient.retryCount);
-                return evaluate(identifier, defaultValue);
-            }
-            throw e;
-        }
+        return null;
     }
 
     public Boolean evaluate(String identifier, Boolean defaultValue) {
@@ -197,6 +205,7 @@ public class FFClient {
     }
 
     private void sleep(Long ms) {
+        
         Long startTime = DateTime.now().getTime();
         Long finishTime = DateTime.now().getTime();
         while ((finishTime - startTime) < ms) {
